# llvm-18-linking-issue

./: .bazelrc  BUILD.sysroot  MODULE.bazel  README.md
abseil-cpp/: MODULE.bazel
abseil-cpp/absl/log/internal/: BUILD.bazel  log_message.cc  log_message.h
abseil-cpp/absl/strings/: BUILD.bazel  has_absl_stringify.h
abseil-cpp/absl/strings/internal/: has_absl_stringify.h
test/: BUILD  test.cc
